# feishu_keyword

./: .env  .env.example  .env.local.example  .env.master  .env.stack.example  .env.test  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  build-public-prod.bat  build-public-test.bat  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  index.html  package-lock.json  package.json  pyrightconfig.json  release.bat  vite.config.js  测试机器人.md
python/: .env.example  .env.local.example  .env.master  .env.test  DEPLOYMENT.md  HTTP_API.md  README.md  http_service.py  http_sync_bodies.py  pyproject.toml  requirements-dev.txt  requirements-http.txt  requirements.txt  run.py
python/celery_jobs/: celery_app.py  requirements.txt  schedules.py
python/config/: settings.py
python/extra/: README.md
python/http_api/: constants.py  dajiala_params.py  rate_limit.py  versions.py
python/migrations/: 001_add_async_task_counts.sql  004_feishu_async_tasks_body_json.sql  009_async_task_run_lease.sql  20260528_04_feishu_async_tasks_body_json.sql  20260528_11_index_p0_optimization.sql  README.md
python/scripts/: celery_worker.ps1  redis_windows_fix.ps1  refactor_utils_imports.py  test_async_scheduled_fetch.py
python/social_platform/: __init__.py  aggregated_job.py  api_response.py  api_status_codes.py  celery_env.py  env_bootstrap.py  http_client.py  redis_client.py  schedule_time.py  search_api_params.py  spider_base.py  str_utils.py  task_envelope.py  time_utils.py  urls.py  worker_http.py  worker_utils.py
python/tests/: test_async_task_cancel.py  (+9 more)
(+571 files in other folders)
